[package]
name = "clustergit"
version = "0.1.0"
authors = ["jRimbault <jacques.rimbault@gmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
exitcode = "1.1.2"
rayon = "1.2.1"
num_cpus = "*"

[build-dependencies]
built = "0.3"
