[package]
name = "clustergit"
version = "0.1.0"
authors = ["jRimbault <jacques.rimbault@gmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
colored = "1.9"
exitcode = "1.1.2"
git2 = "^0.7"
globwalk = "^0.7"

[build-dependencies]
built = "0.3"
