[package]
name = "clustergit"
version = "0.1.0"
authors = ["jRimbault <jacques.rimbault@gmail.com>"]
edition = "2018"
build = "src/build.rs"

[dependencies]
clap = "^2.33.0"
colored = "^1.9"
exitcode = "^1.1.2"
git2 = "^0.11.0"
globwalk = "^0.7"
rayon = "^1.3.0"

[build-dependencies]
built = { version = "0.4", features = ["git2"] }
